# simple-orchestrator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  orchestrator.toml  pyproject.toml
.claude/: settings.local.json
.claude/skills/fastmcp/: SKILL.md
.claude/skills/fastmcp/templates/: api-client-pattern.py  basic-server.py  client-example.py  error-handling.py  openapi-integration.py  prompts-examples.py  resources-examples.py  self-contained-server.py  tools-examples.py
.claude/skills/textual-builder/assets/card-game-template/: README.md  app.py  app.tcss
.claude/skills/textual-builder/references/: basics.md  interactivity.md  layout.md  styling.md  widgets.md
.github/: copilot-setup-steps.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  validate.yaml
prompts/: code-reviewer.md  security-auditor.md
src/simple_orchestrator/: __init__.py  api.py  cron_runner.py  mcp_server.py  polling_runner.py  queue_runner.py  settings.py  tui.py  validators.py  vendor_selector.py
src/simple_orchestrator/agents/: base.py
src/simple_orchestrator/db/: __init__.py  engine.py  history.py  orchestrator.py
src/simple_orchestrator/models/: __init__.py  agent.py  agent_record.py  cron_state.py  mcp.py  memory_record.py  model.py  queue_item.py  session.py
src/simple_orchestrator/prompts/: __init__.py
src/simple_orchestrator/skills/: __init__.py  memory-tool.md  task-executor.md
src/simple_orchestrator/tui/: __init__.py  app.py  app.tcss  service.py  utils.py
src/simple_orchestrator/tui/modals/: __init__.py  command_palette.py  directory_browser.py  prompt_modal.py
src/simple_orchestrator/tui/widgets/: __init__.py  agent_card.py  chat_panel.py  log_panel.py  queue_table.py  scheduled_event_card.py  terminal_panel.py
src/simple_orchestrator/vendors/: base.py  claude_code.py  github_copilot.py  opencode.py
tests/: test_cron_runner.py  test_github_copilot_vendor.py  test_integration_vendors.py  test_mcp_validators.py  test_mock_agent.py  test_orchestrator_db.py  test_queue_runner.py  test_session_history_db.py  test_tui_integration.py  test_vendor_model_selection.py  test_worker_runner.py
tests/integration/: conftest.py  test_api_distributed.py  test_api_standalone.py  test_tui_agents.py  test_tui_queue_processing.py  utils.py
tests/integration/distributed/: conftest.py  test_api_integration.py  test_tui_agents_distributed.py  test_tui_queue_processing_distributed.py
tests/integration/standalone/: test_tui_agents_integration.py  test_tui_integration.py  test_tui_queue_processing_integration.py
tests/integration/vendors/: conftest.py
tests/integration/vendors/claude-code/: test_claude_integration.py
tests/integration/vendors/github-copilot/: test_copilot_integration.py
tests/integration/vendors/opencode/: test_opencode_integration.py
