[project]
name = "simple-orchestrator-workspace"
version = "0.1.0"
description = "Workspace for the simple-orchestrator packages"
readme = "README.md"
authors = [
    { name = "Mario Taddeucci", email = "mariotaddeucci@gmx.com" }
]
requires-python = ">=3.14"
dependencies = [
    "simple-orchestrator[standalone]",
    "simple-orchestrator-api-client",
    "simple-orchestrator-core",
    "simple-orchestrator-database",
    "simple-orchestrator-webapi",
    "simple-orchestrator-worker",
    "simple-orchestrator-tui",
]

[dependency-groups]
dev = [
    "prek>=0.3.11",
    "pyrefly>=0.63.1",
    "ruff>=0.15.12",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
    "RUF", # ruff-specific rules
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TC",  # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "FBT", # flake8-boolean-trap
    "ASYNC", # flake8-async
    "C4",  # flake8-comprehensions
    "LOG", # flake8-logging
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "PERF", # perflint
    "FURB", # refurb
    "TRY", # tryceratops
]
ignore = [
    "S101",   # assert statements (used in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "TD002",  # missing author in TODO
    "TD003",  # missing issue link in TODO
    "TRY003", # long messages outside exception class (acceptable in validators)
    "TC001", "TC002", "TC003",  # type-checking imports break pydantic runtime resolution
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S", "PLR", "FBT", "DTZ", "ASYNC240", "PLC0415", "TC"]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyrefly]
disable-project-excludes-heuristics = true
project_includes = [
    "packages/simple-orchestrator-core/src/simple_orchestrator_core",
    "packages/simple-orchestrator-api-client/src/simple_orchestrator_api_client",
    "packages/simple-orchestrator-database/src/simple_orchestrator_database",
    "packages/simple-orchestrator-webapi/src/simple_orchestrator_webapi",
    "packages/simple-orchestrator-worker/src/simple_orchestrator_worker",
    "packages/simple-orchestrator-tui/src/simple_orchestrator_tui",
]

[tool.uv.workspace]
members = [
    "packages/simple-orchestrator-core",
    "packages/simple-orchestrator-api-client",
    "packages/simple-orchestrator-database",
    "packages/simple-orchestrator-webapi",
    "packages/simple-orchestrator",
    "packages/simple-orchestrator-tui",
    "packages/simple-orchestrator-worker",
]

[tool.uv.sources]
simple-orchestrator-core = { workspace = true }
simple-orchestrator-api-client = { workspace = true }
simple-orchestrator-database = { workspace = true }
simple-orchestrator-webapi = { workspace = true }
simple-orchestrator-tui = { workspace = true }
simple-orchestrator-worker = { workspace = true }
simple-orchestrator = { workspace = true }
